--- a/Draw/Controller/Draw/DrawViewController.xib
+++ b/Draw/Controller/Draw/DrawViewController.xib
@@ -180,7 +180,7 @@
 							<object class="IBUIButton" id="500092087">
 								<reference key="NSNextResponder" ref="967982607"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{227, 2}, {47, 37}}</string>
+								<string key="NSFrame">{{244, 2}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="967982607"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="70881159"/>
@@ -209,15 +209,16 @@
 							<object class="IBUIButton" id="70881159">
 								<reference key="NSNextResponder" ref="967982607"/>
 								<int key="NSvFlags">293</int>
-								<string key="NSFrame">{{274, 2}, {47, 37}}</string>
+								<string key="NSFrame">{{282, 2}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="967982607"/>
 								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
 								<int key="IBUIButtonType">1</int>
-								<string key="IBUINormalTitle">redraw</string>
+								<string key="IBUINormalTitle">clean</string>
 								<reference key="IBUIHighlightedTitleColor" ref="373991744"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
@@ -230,10 +231,10 @@
 							<object class="IBUISlider" id="220307826">
 								<reference key="NSNextResponder" ref="967982607"/>
 								<int key="NSvFlags">292</int>
-								<string key="NSFrame">{{125, 9}, {100, 23}}</string>
+								<string key="NSFrame">{{125, 9}, {77, 23}}</string>
 								<reference key="NSSuperview" ref="967982607"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="500092087"/>
+								<reference key="NSNextKeyView" ref="4353773"/>
 								<bool key="IBUIOpaque">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
@@ -241,6 +242,28 @@
 								<float key="IBUIValue">16</float>
 								<float key="IBUIMinValue">2</float>
 								<float key="IBUIMaxValue">30</float>
+							</object>
+							<object class="IBUIButton" id="4353773">
+								<reference key="NSNextResponder" ref="967982607"/>
+								<int key="NSvFlags">292</int>
+								<string key="NSFrame">{{206, 2}, {37, 37}}</string>
+								<reference key="NSSuperview" ref="967982607"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="500092087"/>
+								<bool key="IBUIOpaque">NO</bool>
+								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+								<int key="IBUIContentHorizontalAlignment">0</int>
+								<int key="IBUIContentVerticalAlignment">0</int>
+								<int key="IBUIButtonType">1</int>
+								<string key="IBUINormalTitle">start</string>
+								<reference key="IBUIHighlightedTitleColor" ref="373991744"/>
+								<object class="NSColor" key="IBUINormalTitleColor">
+									<int key="NSColorSpace">1</int>
+									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
+								</object>
+								<reference key="IBUINormalTitleShadowColor" ref="309240068"/>
+								<reference key="IBUIFontDescription" ref="884790312"/>
+								<reference key="IBUIFont" ref="459841527"/>
 							</object>
 						</object>
 						<string key="NSFrameSize">{320, 40}</string>
@@ -412,6 +435,15 @@
 					</object>
 					<int key="connectionID">29</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickStartButton:</string>
+						<reference key="source" ref="4353773"/>
+						<reference key="destination" ref="372490531"/>
+						<int key="IBEventType">7</int>
+					</object>
+					<int key="connectionID">38</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -457,6 +489,7 @@
 							<reference ref="70881159"/>
 							<reference ref="701574910"/>
 							<reference ref="220307826"/>
+							<reference ref="4353773"/>
 						</object>
 						<reference key="parent" ref="774585933"/>
 					</object>
@@ -500,6 +533,11 @@
 						<reference key="object" ref="220307826"/>
 						<reference key="parent" ref="967982607"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">37</int>
+						<reference key="object" ref="4353773"/>
+						<reference key="parent" ref="967982607"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -519,6 +557,7 @@
 					<string>17.IBPluginDependency</string>
 					<string>26.IBPluginDependency</string>
 					<string>28.IBPluginDependency</string>
+					<string>37.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 				</object>
 				<object class="NSMutableArray" key="dict.values">
@@ -526,6 +565,7 @@
 					<string>DrawViewController</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>UIResponder</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -551,7 +591,7 @@
 				<reference key="dict.values" ref="0"/>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">38</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -566,10 +606,12 @@
 							<string>changeSlider:</string>
 							<string>clickPlay:</string>
 							<string>clickRedraw:</string>
+							<string>clickStartButton:</string>
 							<string>pickColor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -583,6 +625,7 @@
 							<string>changeSlider:</string>
 							<string>clickPlay:</string>
 							<string>clickRedraw:</string>
+							<string>clickStartButton:</string>
 							<string>pickColor:</string>
 						</object>
 						<object class="NSMutableArray" key="dict.values">
@@ -600,6 +643,10 @@
 								<string key="candidateClassName">id</string>
 							</object>
 							<object class="IBActionInfo">
+								<string key="name">clickStartButton:</string>
+								<string key="candidateClassName">id</string>
+							</object>
+							<object class="IBActionInfo">
 								<string key="name">pickColor:</string>
 								<string key="candidateClassName">id</string>
 							</object>
@@ -609,6 +656,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>blackButton</string>
 							<string>blueButton</string>
 							<string>greenButton</string>
 							<string>playButton</string>
@@ -618,6 +666,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>UIButton</string>
 							<string>UIButton</string>
 							<string>UIButton</string>
 							<string>UIButton</string>
@@ -630,6 +679,7 @@
 						<bool key="EncodedWithXMLCoder">YES</bool>
 						<object class="NSArray" key="dict.sortedKeys">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>blackButton</string>
 							<string>blueButton</string>
 							<string>greenButton</string>
 							<string>playButton</string>
@@ -639,6 +689,10 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<object class="IBToOneOutletInfo">
+								<string key="name">blackButton</string>
+								<string key="candidateClassName">UIButton</string>
+							</object>
 							<object class="IBToOneOutletInfo">
 								<string key="name">blueButton</string>
 								<string key="candidateClassName">UIButton</string>
